lab1/Test/L1-A-7-15.output
Error Type A at Line 5
Error Type A at Line 17
Error Type A at Line 27
Error Type A at Line 29
